# crazy-win

./: index.html  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/libs/: mod.rs
src-tauri/src/libs/api/: docker_api.rs  http_client.rs  k8s_api.rs  kubeconfig.rs  mod.rs
src-tauri/src/libs/cli/: docker.rs  exec.rs  helm.rs  kubectl.rs  mod.rs
src-tauri/src/libs/io/: env_vars.rs  hosts_file.rs  mod.rs
src-tauri/src/libs/kafka/: admin.rs  consumer.rs  lifecycle.rs  mod.rs  produce.rs  types.rs
src-tauri/src/libs/terminal/: mod.rs  session.rs
src-tauri/src/libs/wsl/: distros.rs  mod.rs  session.rs
src/components/: app-header.tsx  app-sidebar.tsx  coming-soon.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: alert-dialog.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
src/features/dev-environment/: confirm-delete-dialog.tsx  dev-environment-store.ts  docker-images-panel.tsx  docker-manager-logic.ts  docker-manager.tsx  docker-networks-panel.tsx  docker-volumes-panel.tsx  helm-releases-logic.ts  helm-releases.tsx  http-client-store.ts  http-client.tsx  json-detail-pane.tsx  kafka-detect-logic.ts  kafka-lifecycle-controls.tsx  kafka-manager-logic.ts  kafka-manager.tsx  kafka-message-viewer.tsx  kafka-produce-form.tsx  kafka-start-panel.tsx  kafka-store.ts  kafka-topics-browser.tsx  kubernetes-manager-logic.ts  kubernetes-manager.tsx  terminal-logic.ts  (+13 more)
src/lib/: platform.ts  tools.ts
(+31 files in other folders)
